# starcraft-api

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: portable.yml
CMake/: svnrev.h.in
Documentation/: Doxyfile  doxygen.css  footer.html  header.html
Documentation/dox/: bullettypes.dox  colortypes.dox  orders.dox  playertypes.dox  races.dox  techtypes.dox  unittypes.dox  upgradetypes.dox  weapontypes.dox
Documentation/post-processing/: compress.sh  modify_html.sh
bwapi/BWAPILIB/Source/: Unitset.cpp
bwapi/DocumentationGen/: races.cpp  techtypes.cpp  unittypes.cpp
bwapi/Runtime/: Legacy1161RuntimeBackend.cpp  Legacy1161RuntimeBackend.h  RemasteredRuntimeBackend.cpp  RemasteredRuntimeBackend.h  RuntimeBackend.cpp  RuntimeBackendFactory.cpp  RuntimeCommandEncoder.cpp  RuntimeCommandQueue.cpp  RuntimeCommandSurface.cpp  RuntimeContract.cpp  RuntimeEnvironment.cpp  RuntimeExecutor.cpp  RuntimeImplementationGap.cpp  RuntimeInstallation.cpp  RuntimeManifest.cpp  RuntimeProcess.cpp  RuntimeProcessMemory.cpp  RuntimeReadiness.cpp  RuntimeResidentAdapterEntry.cpp  RuntimeResidentBridge.cpp  RuntimeResidentLoader.cpp  UnsupportedRuntimeBackend.cpp  UnsupportedRuntimeBackend.h
bwapi/include/BWAPI/: DamageType.h  Interface.h  Race.h  UnitType.h
bwapi/include/BWAPI/Runtime/: RuntimeBackend.h  RuntimeCommandEncoder.h  RuntimeCommandQueue.h  RuntimeCommandSurface.h  RuntimeContract.h  RuntimeExecutor.h  RuntimeImplementationGap.h  RuntimeInstallation.h  RuntimeManifest.h  RuntimeProcess.h  RuntimeProcessMemory.h  RuntimeReadiness.h  RuntimeResidentBridge.h  RuntimeResidentLoader.h
docs/: legacy-1161-official-download-research.md  legacy-1161-runtime-plan.md  remastered-bwapi-parity-plan.md  remastered-bwapi-production-execution.md  remastered-porting.md
runtime/: README.md
scripts/: scan_legacy1161_artifact.py  setup_legacy1161_runtime.sh
tests/: CMakeLists.txt  guarded_parallel_cli_test.cmake  public_api_smoke_test.cpp  runtime_adapter_proof_cli_test.cmake  runtime_backend_test.cpp  runtime_command_encoder_test.cpp  runtime_command_queue_test.cpp  runtime_command_surface_test.cpp  runtime_contract_test.cpp  runtime_executor_test.cpp  runtime_gap_report_cli_test.cmake  runtime_implementation_gap_test.cpp  runtime_inject_resident_cli_test.cmake  runtime_installation_test.cpp  runtime_legacy1161_artifact_scan_test.cmake  runtime_legacy1161_setup_cli_test.cmake  runtime_legacy1161_setup_script_test.cmake  runtime_manifest_test.cpp  runtime_memory_probe_cli_test.cmake  runtime_process_memory_test.cpp  runtime_process_test.cpp  runtime_production_bridge_test.cpp  runtime_readiness_test.cpp  runtime_resident_adapter_load_test.cpp  runtime_resident_bridge_test.cpp  runtime_submit_command_cli_test.cmake
tests/fixtures/: ai_module_smoke.cpp  remastered-complete.manifest  remastered-incomplete.manifest
tools/: api_surface_audit.cpp  guarded_parallel.py  linux-smoke-build.sh  macos-debugger.entitlements  runtime_adapter_proof.cpp  runtime_binary_anchors.cpp  runtime_gap_report.cpp  runtime_inject_resident.cpp  runtime_input.cpp  runtime_launch.cpp  runtime_legacy1161_setup.cpp  runtime_memory_probe.cpp  runtime_probe.cpp  runtime_resident_stopper.cpp  runtime_submit_command.cpp
